--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,13 @@ h6 {
   font-weight: 600; 
   font-family: 'Open Sans', sans-serif;
   color:#4e4e4e;
+  
+}
+h7{
+  font-weight: 600; 
+  font-family: 'Open Sans', sans-serif;
+  color:#4e4e4e;
+   font-size:3em;
 }
 
 h1{
@@ -120,7 +127,7 @@ body > section {
 
 .center {
   text-align: center;
-  padding-bottom: 55px;
+  padding-bottom: 10px;
 }
 
 .scaleIn {
@@ -373,11 +380,11 @@ input.search-form:hover {
 }
 
 #main-slider .carousel .carousel-content {
-  margin-top: 150px;
+  margin-top: 80px;
 }
 
 #main-slider .carousel .slide-margin{
-  margin-top: 140px;
+ 
 }
 
 #main-slider .carousel h2 {
@@ -2531,10 +2538,10 @@ position: relative;
 }
 
 pre[class*=language-] {
-background: url(/media/redesign/img/blueprint-dark.png) top center #fafbfc;
+background: url(/media/redesign/img/blueprint-dark.png) #fafbfc;
 
--moz-tab-size: 4;
-tab-size: 4;
+-moz-tab-size:1;
+tab-size:1;
 -moz-hyphens: none;
 -webkit-hyphens: none;
 -ms-hyphens: none;
